# miden-day-bet

./: .gitignore  Cargo.toml  INTERNAL.md  README.md  miden-toolchain.toml
.miden/: miden-client.toml
contracts/betting-account/: Cargo.toml
contracts/betting-account/src/: lib.rs
contracts/higher-than-seven-note/: Cargo.toml
contracts/higher-than-seven-note/src/: lib.rs
integration/src/: helpers.rs
integration/tests/: higher_than_seven_test.rs
patches/midenc-codegen-masm-0.6.0/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
patches/midenc-codegen-masm-0.6.0/intrinsics/: advice.masm  crypto.masm  i128.masm  mem.masm
patches/midenc-codegen-masm-0.6.0/proptest-regressions/opt/operands/: solver.txt
patches/midenc-codegen-masm-0.6.0/src/: artifact.rs  data_segments.rs  emitter.rs  intrinsics.rs  lib.rs  linker.rs  lower.rs  stack.rs
patches/midenc-codegen-masm-0.6.0/src/emit/: binary.rs  felt.rs  int128.rs  int32.rs  int64.rs  mem.rs  mod.rs  primop.rs  smallint.rs  unary.rs
patches/midenc-codegen-masm-0.6.0/src/lower/: component.rs  lowering.rs  native_ptr.rs  utils.rs
patches/midenc-codegen-masm-0.6.0/src/lower/expected/: utils_emit_binary_search_1_case.hir  utils_emit_binary_search_1_case.masm  utils_emit_binary_search_2_cases.hir  utils_emit_binary_search_2_cases.masm  utils_emit_binary_search_3_cases.hir  utils_emit_binary_search_3_cases.masm  utils_emit_binary_search_4_cases.hir  utils_emit_binary_search_4_cases.masm  utils_emit_binary_search_5_cases.hir  utils_emit_binary_search_5_cases.masm  utils_emit_if.hir  (+5 more)
(+11 files in other folders)
