[package]
name = "higher-than-seven-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:higher-than-seven-note"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:betting-account" = { path = "../betting-account" }

[package.metadata.component.target.dependencies]
"miden:betting-account" = { path = "../betting-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
